app-1/k8s/kubernetes.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-1
  labels:
    app: app-1
    version: v1.0
spec:
  replicas: 2
  selector:
    matchLabels:
      app: app-1
  template:
    metadata:
      labels:
        app: app-1
        version: v1.0
    spec:
      containers:
      - name: app-1
        image: 022887457179.dkr.ecr.us-east-1.amazonaws.com/app-1:latest
        imagePullPolicy: Always
        ports:
        - name: http
          containerPort: 5000
        resources:
          requests:
            memory: "128Mi"
            cpu: "250m"
          limits:
            memory: "256Mi"
            cpu: "500m"
---

apiVersion: v1
kind: Service
metadata:
  name: service-app-1
  labels:
     app: app-1
     service: prometheus-demo
spec:
  selector:
    app: app-1
  ports:
    - name: http
      protocol: TCP
      port: 5000
      targetPort: http

---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-app-1
  annotations:
    nginx.ingress.kubernetes.io/force-ssl-redirect: 'true'
    nginx.ingress.kubernetes.io/ssl-passthrough: 'false'
    nginx.ingress.kubernetes.io/ssl-redirect: 'true'
    nginx.ingress.kubernetes.io/rewrite-target: /
  labels:
    app: app-1
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - app-1.guilhermefreis.com
    secretName: certificate-tls
  rules:
  - host: app-1.guilhermefreis.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: service-app-1
            port:
              number: 5000
